# pyo3-testing

./: CHANGELOG.md  Cargo.toml  README.md  version-check.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dependabot.yml  deploy-rust.yml  quality.yml  tag-pr.yml
src/: lib.rs  pyo3test.rs  raises.rs  withpyraises.rs
tests/: test_compile_error.rs  test_pyo3_version.rs  test_pyo3test.expanded  test_pyo3test.rs  test_withpyraises.rs
tests/ui/: invalid_pyo3imports.rs  invalid_withpyraises.rs  invalid_withpyraises.stderr
